<resources>
    <string name="app_name">AlcoSensing</string>
    <string name="consent_button">Start Consent</string>
    <string name="survey_button">Take Survey</string>
    <string name="consent_button_done">Consented</string>
    <string name="clear_button">Clear</string>
    <string name="survey">Survey</string>
    <string name="menu_data_cleared">Data has been cleared</string>
    <string name="user_name">User Name:</string>
    <string name="date_consented">Date Consented:</string>
    <string name="responses">Responses so far:</string>
    <string name="welcome">Welcome</string>
    <string name="about">About</string>
    <string name="reqs_title">Study Requirements</string>
    <string name="prize_title">Prize Draw</string>
    <string name="reg_title">About You</string>
    <string name="consent_string">Consent</string>
    <string name="survey_title">Drinks Survey</string>
    <string name="wifi_warning">AlcoSensing needs to upload some data.\nPlease connect to WiFi.</string>
    <string name="survey_warning">AlcoSensing will send a survey soon.\nLook out for notifications.</string>
    <string name="alcosensing_name">AlcoSensing</string>
    <string name="invalid_height_under">Invalid answer, your height must be more than %1$s centimetres. </string>
    <string name="invalid_height_over">Invalid answer, your height must be less than %1$s centimetres.</string>
    <string name="invalid_weight_under">Invalid answer, your weight must be more than %1$s kilograms.</string>
    <string name="invalid_weight_over">Invalid answer, your weight must be less than %1$s kilograms.</string>
    <string name="status_screen_advice">
        <![CDATA[
           <div style=\"font-size: 0.85em\">
           Complete at least 10 survey responses before <b>5th August 2017</b> to qualify for the prize draw.
           <br>
           <br>
           Keep your phone on and charged and surveys will be sent automatically every few days.
           <br>
           <br>
           <b>It helps us if you click the button below whenever you are drinking alcohol, but don\'t worry if you forget.</b>
           </div> ]]>

    </string>
    <string name="full_responses">
        <![CDATA[
           <div style=\"font-size: 0.85em\">
           <b>Thanks! You\'ve completed 10 survey responses and have contributed valuable data to our research.</b>
           <br>
           <br>
           Unless you opted out, then your email address will be entered into the prize draw. Winners will be notified
           by 8th August 2017.
           <br>
           <br>
           The study will continue until 5th August 2017. If you keep AlcoSensing installed you\'ll help to
            contribute even more data to our research.
            <br>
            <br>
            <b>Thanks again for taking part in AlcoSensing.</b>
           </div> ]]>

    </string>
    <string name="study_end">
        <![CDATA[
           <div style=\"font-size: 0.85em\">
           <b>The study is now over and you should delete this app from your phone.</b>
           <br>
           <br>
           If you qualified for the prize draw, your email address will be entered. Winners will be notified
           by 8th August 2017.
           </div> ]]>

    </string>
    <string name="welcome_text" formatted="false">
        <![CDATA[
           <h2 style=\"text-align: center; font-family:sans-serif-light;\">Welcome to AlcoSensing</h2></div>
           <div style=\"font-size: 0.85em\">Thank you for downloading the AlcoSensing app. By downloading and
            using this app you’ll be helping with mobile sensing and machine
            learning research. Please read the following information carefully
            before you decide to take part.
            <br>
            <br>
            AlcoSensing is part of a research project conducted by a master’s
            student at Queen Mary University of London. If you continue to the
            following screens and register for this study you are agreeing to be
            a participant in this research project. You should only take part if
            you want to.
             <br>
             <br>
            If you don’t want to take part, you can uninstall this app by going to
            your phone settings now. No information will be recorded and you won’t
            be contacted.
             <br>
             <br>
            If you register and start using AlcoSensing but want to leave the study
            early, you are free to do so at any time. Just uninstall the app. Some
            data may have been recorded and will be used for research. If you’ve used
            the app for long enough you may still be entered into the prize draw, but
            you won’t be contacted for any other reason.
             <br>
             <br>
            If you decide you want to completely opt-out of the study and have all
            of your data deleted, you can email <a href=\"mailto:j.darby@se16.qmul.ac.uk?Subject=AlcoSensing%20Enquiry\">
            j.darby@se16.qmul.ac.uk</a> or <a href=\"mailto:laurissa.tokarchuk@qmul.ac.uk?Subject=AlcoSensing%20Enquiry\">
            laurissa.tokarchuk@qmul.ac.uk</a> and ask to be removed from the study without giving a reason.
             <br>
             <br>
            <b>For more information on what this study involves and what you need to
            do, click next.</b></div> ]]>

    </string>
    <string name="about_text">
        <![CDATA[
           <h2 style=\"text-align: center; font-family:sans-serif-light;\">What is this research about?</h2>
        "<div style=\"font-size: 0.85em\">
           In your hand right now you’re holding a very impressive piece of techology. Your phone
           contains lots of sensors used to measure  different things about the world around you.
           <br>
             <br>
           Some of these you probably already know about, like the GPS which tells your
           phone where you are. There’s also the accelerometer and gyroscope so that your phone
           can detect movement, but have you ever thought about the digital compass or the light and proximity sensors?
           <br>
             <br>
           All of these sensors produce data – numbers which represent things like how quickly you’re
           moving your phone, how bright or loud the room is, your location and so on.
           <br>
             <br>

           <b>AlcoSensing records some of this data from these sensors during certain time
           periods.</b> At the same time it records some information about your phone, like times
           when you switch your screen on or receive a notification.
           <br>
             <br>
           Don’t worry, we’re not interested in exactly what you do with your phone. <b>We’re only
           interested in data.</b> AlcoSensing won't record your calls
           or access your contacts. We won’t be able to read what’s in your messages and we
           won’t be able to look at your internet use, photos or the content of any other apps.
           <br>
             <br>

           After AlcoSensing records some data, we’ll send you a notification asking you
           to answer three quick questions about any alcohol you may have consumed
           recently (more about that later). The point of this research is to see if we can find
           a link between the data we collect from your phone, and how much you’ve had to drink.
           <br>
             <br>

           <b>If you’re happy to have data like this collected from your phone, please click next.</b>
           </div>"


        ]]>


    </string>
    <string name="how_text">
    <![CDATA[
           <h2 style=\"text-align: center; font-family:sans-serif-light;\">How does the app work?</h2></div>
           <div style=\"font-size: 0.85em\">
           AlcoSensing runs in the background. <b>You can continue to use your phone exactly as you
           always would.</b> Whenever AlcoSensing is recording some data you’ll see a notification.
           It uses up a bit more battery than usual, so we’ll try not to record data whenever your
           battery is low. If you don’t want any data recorded when you see the notification,
           just expand the notification and click to cancel; we won’t try again for 3 hours.
           <br>
             <br>
           When data recording ends the notification will disappear. Sometime later (perhaps the
           next morning) a different notification will pop up asking you to answer 3 questions
           related to a recent time period (e.g. 8pm to midnight last night). We’ll ask if you
           had anything to drink, how much you had to drink, and how drunk you felt. <b>Just answer
           the questions as accurately and truthfully as you can.</b>
           <br>
             <br>
           If you want to qualify for the prize draw <b>you need to allow the app to collect data and you need to respond
           to the survey notification at least 10 times.</b>
           <br>
             <br>
           We’ll only ask you the questions every 2-3 days. So you’ll have to keep the app installed
           on your phone for about a month to complete the study.
           <br>
             <br>
           We don’t want to use up your mobile data, so AlcoSensing data only gets uploaded to our
           server over WiFi. Please make sure you connect to a hotspot every now and then (the app
           status screen will tell you if it’s waiting for WiFi).
           <br>
             <br>
           If your phone switches off, the app will automatically restart in the background when
           you switch the phone back on. <b>Please don’t force close the app.</b> This will
           break things and you could lose your progress towards the prize draw.
           <br>
             <br>
           If we release an important app update to the Play Store, AlcoSensing will send you a notification.
           <b>Please make sure you keep the app up to date</b> or you may not receive surveys and won\'t
           be able to qualify for the prize draw.
           <br> <br>
           Only uninstall the app at the end of the study or if you decide you want to leave the study early.
           The AlcoSensing main screen will display a message when the study is over.
            <br><br>
           <b>If all of this sounds ok and you are happy to proceed, please click next.</b>
           </div> ]]>
    </string>
    <string name="requirements_text">
        <![CDATA[
           <div style=\"font-size: 0.9em\">
           In this research study we’re going to be asking you about drinking alcohol.
           <br>
           <br>
           It doesn’t matter how much you drink, you can still take part and enter the prize draw even if you never drink any alcohol at all.
           <br>
             <br>
           Because we’re talking about alcohol, we need to make sure that you meet certain requirements for this
           study.
           <br>
           <br>
           <b>Please tick the boxes next to the statements below <u>only if you agree</u>, then click next</b>:

           </div> ]]>
    </string>
    <string name="me_credit">AlcoSensing was made by Joe Darby\n<a href= "www.github.com/joedarby">github.com/joedarby</a>
    </string>
    <string name="skit_credit">AlcoSensing uses SensingKit, a multi-platform sensing framework for large-scale experiments
        \n<a href= "sensingkit.org">sensingkit.org</a>
    </string>
    <string name="rstack_credit">AlcoSensing uses ResearchStack, an SDK and UX framework for building research study apps on Android
        \n<a href= "researchstack.org">researchstack.org</a>
    </string>
    <string name="icon_credit">AlcoSensing \"pint glass\"  icon made by <a href="www.freepik.com">Freepik</a>
        from <a href="www.flaticon.com">www.flaticon.com</a>

    </string>
</resources>