<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.joedarby.alcosensing1.Data.MainActivity"
>

    <include layout="@layout/rsb_layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/alcosensing_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            android:layout_marginTop="10dp"
            tools:src="@mipmap/large_pint_glass" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            >

            <TextView
                android:id="@+id/consented_date_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_consented"
                android:visibility="invisible"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <TextView
                android:id="@+id/consent_date"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Date"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

        </LinearLayout>


        <TextView
            android:id="@+id/progress_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/responses"
            android:visibility="invisible"
            android:textAppearance="@style/TextAppearance.AppCompat"/>
        
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:progressTint="@color/colorAccent"
            style="@android:style/Widget.ProgressBar.Horizontal"/>

        <TextView
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:paddingBottom="25dp"/>

        <WebView
            android:id="@+id/advice_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:fadeScrollbars="false"/>



    </LinearLayout>

    <Button
        android:id="@+id/drinking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I'm drinking now"
        android:padding="20sp"
        android:layout_gravity="center"
        android:visibility="invisible"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <TextView
        android:id="@+id/wifi_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text=""
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        android:layout_marginBottom="15dp"/>




</LinearLayout>
